--- a/services/nlp-insights/setup.cfg
+++ b/services/nlp-insights/setup.cfg
@@ -2,3 +2,16 @@
 max-line-length=140
 [pylint.FORMAT]
 max-line-length = 140
+[mypy]
+#no_site_packages=true
+strict_optional=true
+[mypy-fhir.*]
+# fhir does not have correct type annotations :( 
+# https://githubmemory.com/repo/nazrulworld/fhir.resources/issues/58
+ignore_missing_imports=true
+follow_imports=skip
+[mypy-ibm_whcs_sdk.annotator_for_clinical_data.*]
+# ACD has no type annotations
+ignore_missing_imports=true
+
+ 
