--- a/services/nlp-insights/setup.cfg
+++ b/services/nlp-insights/setup.cfg
@@ -15,4 +15,6 @@ follow_imports=skip
 ignore_missing_imports=true
 [mypy-ibm_cloud_sdk_core.authenticators.iam_authenticator.*]
 ignore_missing_imports=true
+[mypy-deepdiff.*]
+ignore_missing_imports=true
  
