--- a/services/nlp-insights/setup.cfg
+++ b/services/nlp-insights/setup.cfg
@@ -17,4 +17,6 @@ ignore_missing_imports=true
 ignore_missing_imports=true
 [mypy-deepdiff.*]
 ignore_missing_imports=true
- 
+[mypy-text_analytics.*]
+disallow_untyped_defs = True
+warn_return_any = True
