--- a/services/nlp-insights/build.gradle
+++ b/services/nlp-insights/build.gradle
@@ -36,7 +36,7 @@ python {
 
 task textAnalyticsPySetupBuild(type: PythonTask) {
     module = 'pip'
-    extraArgs = ['install', 'pytest==4.6.3', 'pytest-cov==2.7.1', 'twine==1.14.0', 'flake8==3.7.8', 'wheel==0.36.2']
+    extraArgs = ['install', 'pytest==4.6.3', 'pytest-cov==2.7.1', 'twine==1.14.0', 'deepdiff==5.5.0', 'flake8==3.7.8', 'types-requests==2.25.9', 'wheel==0.36.2']
 }
 
 task textAnalyticsPyGenerateReqs {
